<resources>
    <string name="app_name">RecipeApp</string>

    <string name="linear_layout_manager" translatable="false">androidx.recyclerview.widget.LinearLayoutManager</string>

    <string name="add_recipe">Add Recipe</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="delete_recipe">Delete Recipe</string>

    <string name="filter">Filter</string>
    <string name="title">Title</string>
    <string name="enter_review_title_hint">Enter review title</string>
    <string name="ingredients">Ingredients</string>
    <string name="enter_ingredients_hint">Enter Ingredients</string>
    <string name="steps">Steps</string>
    <string name="enter_steps_hint">Enter Steps</string>
    <string name="type">Type</string>
    <string name="page_title_recipe">Recipe</string>
    <string name="page_title_editor">Editor</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>

    <string name="error_required_message">Required</string>

</resources>